# yt-assist

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  batch.py  config.py  dubbing.py  export.py  rag.py  sync.py  transcripts.py  videos.py  whisper.py  wizard.py
app/db/: __init__.py  database.py  models.py
app/services/: async_utils.py  content_wizard.py  dubbing.py  rag.py  sync.py  transcript_cleanup.py  transcripts.py  whisper.py  youtube.py  youtube_captions.py
data/: cleanup_config.json  whisper_config.json
docs/: ARD.MD  PLAN.MD  PRD.MD
ui/: app.py
ui/pages/: 1_Library.py
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/: TranscriptDiff.tsx  TranscriptManager.tsx
web/src/lib/: api.ts
web/src/pages/: BatchOperations.tsx  ContentStudio.tsx  Library.tsx  QA.tsx
